load model from fbx

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           </script>
 	</head>
 	<body>
+		<!-- <p>hi there</p> -->
 		<script type="module" src="./main.js"></script>
 	</body>
 </html>
